syntax = "proto3";

package user;

import "google/api/annotations.proto";

option go_package = "github.com/nanayunn/grpc-mongo-crud/proto";

service UserService {
    rpc CreateUser(CreateUserReq) returns (CreateUserRes){
        option (google.api.http) = {
            post: "/createuser"
            body: "*"
        };
    }

    rpc ReadUser(ReadUserReq) returns (ReadUserRes){
        option (google.api.http) = {
            get: "/readuser"
        };
    }
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
    rpc ListUser(ListUserReq) returns (stream ListUserRes);
}

message User {
    string id = 1;
    string name = 2;
    string age = 3;
    string userid = 4;
}

message CreateUserReq {
    User user = 1;
}

message CreateUserRes {
    User user = 1;
}

message ReadUserReq {
    string id = 1;

}

message ReadUserRes {
    User user = 1;

}

message UpdateUserReq {
    User user = 1;

}

message UpdateUserRes {
    User user = 1;

}

message DeleteUserReq {
    string id = 1;

}

message DeleteUserRes {
    bool success = 1;

}

message ListUserReq {

}

message ListUserRes {
    User user = 1;
}
